[tool.poetry]
name = "sam-convert-diagram-to-cfn"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "function/*" }
]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.59"
black = "^24.2.0"
mypy = "^1.9.0"
isort = "^5.13.2"
pyproject-flake8 = "^6.1.0"
pyproject-autoflake = "^1.0.2"

[tool.isort]
profile = "black"

[tool.flake8]
ignore = "E203,E501,W503,T499"

[tool.mypy]
# common
python_version = 3.11
show_column_numbers = true
show_error_context = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true
# warning
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
